added scm tag because of continuum

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,11 @@
   <name>idegaWeb Media Block</name>
   <artifactId>com.idega.block.media</artifactId>
   <version>4.0-SNAPSHOT</version>
+  <scm>
+    <connection>scm:cvs:ext:${user.name}@code.idega.com:/idega/cvs:${groupId}/${artifactId}/</connection>
+    <developerConnection>scm:cvs:ext:${user.name}@code.idega.com:/idega/cvs:${groupId}/${artifactId}/</developerConnection>
+  </scm>
+
   <developers>
     <developer>
       <name>Tryggvi Larusson</name>
