--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,17 @@
       <version>4.0-SNAPSHOT</version>
       <type>jar</type>
     </dependency>
+    <dependency>
+      <groupId>com.idega.block.platform</groupId>
+      <artifactId>com.idega.webface</artifactId>
+      <version>4.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>com.idega.block.platform</groupId>
+      <artifactId>com.idega.slide</artifactId>
+      <version>4.0-SNAPSHOT</version>
+      <type>jar</type>
+    </dependency>
   </dependencies>
   
 </project>
