--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,12 @@
       <version>4.0-SNAPSHOT</version>
       <type>jar</type>
     </dependency>
+    <dependency>
+      <groupId>com.idega.block.platform</groupId>
+      <artifactId>com.idega.content</artifactId>
+      <version>4.0-SNAPSHOT</version>
+      <type>jar</type>
+    </dependency>
   </dependencies>
   
 </project>
