--- a/pom.xml
+++ b/pom.xml
@@ -79,5 +79,9 @@
       <groupId>com.idega.block.platform</groupId>
       <artifactId>com.idega.content</artifactId>
     </dependency>
+    <dependency>
+    	<groupId>com.idega.block.platform</groupId>
+		<artifactId>org.apache.myfaces</artifactId>
+	</dependency>
   </dependencies>
 </project>
