--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -1,30 +1,29 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
-<web-app xmlns="http://java.sun.com/xml/ns/j2ee"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee 
- http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
-	version="2.4">
 
-	<servlet>
-		<display-name>MediaServlet</display-name>
-		<servlet-name>MediaServlet</servlet-name>
-		<servlet-class>
-			com.idega.block.media.servlet.MediaServlet
-		</servlet-class>
-		<load-on-startup>2</load-on-startup>
-	</servlet>
+<!DOCTYPE web-app
+    PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
+    "http://java.sun.com/dtd/web-app_2_3.dtd">
 
-	<servlet-mapping>
-		<servlet-name>MediaServlet</servlet-name>
-		<url-pattern>/servlet/MediaServlet</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>MediaServlet</servlet-name>
-		<url-pattern>/servlet/MediaServlet/</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>MediaServlet</servlet-name>
-		<url-pattern>/servlet/MediaServlet/*</url-pattern>
-	</servlet-mapping>
+<web-app>
+
+  <servlet>
+    <servlet-name>MediaServlet</servlet-name>
+    <display-name>MediaServlet</display-name>
+    <servlet-class>com.idega.block.media.servlet.MediaServlet</servlet-class>
+    <load-on-startup>2</load-on-startup>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>MediaServlet</servlet-name>
+    <url-pattern>/servlet/MediaServlet</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>MediaServlet</servlet-name>
+    <url-pattern>/servlet/MediaServlet/</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>MediaServlet</servlet-name>
+    <url-pattern>/servlet/MediaServlet/*</url-pattern>
+  </servlet-mapping>
 
 </web-app>
