Using JCR services (back-ended by Jackrabbit) instead of Slide. Note: work in progress.

--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
     </dependency>
     <dependency>
       <groupId>com.idega.block.platform</groupId>
-      <artifactId>com.idega.slide</artifactId>
+      <artifactId>com.idega.jackrabbit</artifactId>
     </dependency>
     <dependency>
       <groupId>com.idega.block.platform</groupId>
